# Portifolio

./: pyproject.toml
app/: app.py
app/static/: script.js  style.css
app/templates/: index.html
templates/: index.html
