[tool.poetry]
name = "portifolio"
version = "0.1.0"
description = "Portifólio"
authors = ["LecoOliveira <lecoverde10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
